# MC-old

./: .gitignore  CMakeLists.txt  Chi  Distribution.cpp  Distribution.h  Estimator.h  Geometry.cpp  Geometry.h  Main.cpp  Main_TRMM.cpp  Makefile  Material.h  Nuclide.h  PackageList.cmake  Particle.cpp  Particle.h  README.md  Random.h  Reaction.h  Solver.cpp  Solver.h  Source.h  TRMM.cpp  VReduction.cpp  XMLparser.cpp  XMLparser.h  XSec.cpp
Distribution/: CMakeLists.txt  Distribution.cpp  Distribution.h
Distribution/unit_test/: CMakeLists.txt  distribution_test.cpp
Estimator/: CMakeLists.txt  Estimator.cpp  Estimator.h
Geometry/: CMakeLists.txt  Geometry.cpp  Geometry.h
Geometry/unit_test/: CMakeLists.txt  plane_test.cpp  sphere_test.cpp
Material/: CMakeLists.txt  Material.cpp  Material.h  Nuclide.cpp  Nuclide.h  Reaction.cpp  Reaction.h  XSec.h
Parser/: CMakeLists.txt  XMLparser.cpp  XMLparser.h  YAMLparser.cpp  YAMLparser.h
Parser/yaml-cpp/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  yaml-cpp-config.cmake  yaml-cpp-targets.cmake
Parser/yaml-cpp/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Parser/yaml-cpp/util/: CTestTestfile.cmake  Makefile  cmake_install.cmake  parse  read  sandbox
Particle/: CMakeLists.txt  Particle.h  Source.cpp
Particle/unit_test/: CMakeLists.txt
Simulator/: CMakeLists.txt  Simulator.cpp  Simulator.h
Simulator/unit_test/: integral_simulation_test.cpp
Simulator/unit_test/test_inputs/: sphere_detection
Utilities/: CMakeLists.txt  Point.cpp  Point.h  Solver.cpp  Solver.h
Utilities/unit_test/: CMakeLists.txt  point_test.cpp  solver_test.cpp
VReduction/: CMakeLists.txt
build2/: CMakeCache.txt  CTestTestfile.cmake  Detecting a Sphere - output.txt  Makefile  Shielding - output.txt  Simple Slabs - output.txt  callgrind.HEU  callgrind.out.11660  cmake_install.cmake
build2/Distribution/: Makefile  cmake_install.cmake
build2/Distribution/unit_test/: Makefile  cmake_install.cmake
build2/Estimator/: Makefile  cmake_install.cmake
build2/Estimator/unit_test/: Makefile
build2/Geometry/: Makefile  cmake_install.cmake
build2/Geometry/unit_test/: Makefile  cmake_install.cmake
build2/Material/: Makefile  cmake_install.cmake
build2/Material/unit_test/: Makefile  cmake_install.cmake
build2/Parser/: Makefile  cmake_install.cmake
build2/Parser/unit_test/: Makefile
build2/Particle/: Makefile  cmake_install.cmake
build2/Particle/unit_test/: Makefile
build2/Simulator/: Makefile  cmake_install.cmake
build2/Simulator/unit_test/: CMakeLists.txt  Makefile  cmake_install.cmake  integral_simulation_test
build2/Utilities/: Makefile  cmake_install.cmake
build2/Utilities/unit_test/: Makefile  solver_test
build2/VReduction/: Makefile  cmake_install.cmake
build2/VReduction/unit_test/: Makefile  cmake_install.cmake
build2/examples/infinite_GCR_TD/: input.xml  plot.py
build2/examples/infinite_GCR_TRMM/: TDMC.h5  output.h5
build2/examples/infinite_GCR_TRMM_100/: output.h5  plot.py
build2/examples/infinite_GCR_TRMM_critical/: input.xml  output_TRMM.h5
build2/examples/infinite_GCR_TRMM_critical2/: plot.py
build2/examples/infinite_GCR_Ttmp/: plot.py
build2/input_example/: shielding_varReduction  slab_analytic
build2/xs_library/: 092235D.txt  092238D.txt  README.txt  Sn-120.txt  Zr-96.txt
cmake/Modules/: Catch.cmake  MCpackage.cmake
examples/: HEU_sphere  HEU_sphere_leakage.xml  fission_sphere  fission_sphere_leakage  infinite_GCR.xml  infinite_GCR_TD.xml  infinite_HOC  infinite_UOC  k_infinity  k_infinity_dataF  shielding_vReduction.xml  slab_analytic  slab_analytic.xml  sphere_detection.xml
examples/Dynamic/TDMC/: .input_td.xml.swo  input.xml  input_k.xml  input_td.xml  (+2 more)
examples/HEU_sphere_leakage/: input.xml
examples/UCube/: input.xml  plot.py
examples/infinite_GCR/: input.xml
examples/infinite_GCR_TD/: input.xml  output.h5  plot.py
examples/infinite_GCR_TD_sub/: input.xml  output.h5  output_ref.h5  plot.py
examples/infinite_GCR_TRMM/: input.xml  output_TRMM.h5  plot.py
examples/infinite_GCR_TRMM_100/: input.xml  output_TRMM.h5
examples/infinite_GCR_TRMM_cr/: input.xml  plot.py
examples/infinite_GCR_TRMM_critical/: output.h5  plot.py
examples/infinite_GCR_TRMM_critical2/: input.xml  output.h5  output_TRMM.h5
examples/infinite_GCR_Ttmp/: input.xml
examples/shielding_vReduction/: input.xml
examples/slab_analytic/: input.xml  output.h5  output.txt
examples/sphere_detection/: input.xml  output.h5  output.txt
include/: .Estimator.h.swp  Algorithm.h  Catch.h  Const.h  Constants.h  Distribution.h  Entropy.h  Estimator.h  Geometry.h  Material.h  Nuclide.h  Particle.h  Point.h  Reaction.h  Simulator.h  Solver.h  Source.h  TRMM.h  VReduction.h  XMLparser.h  XSec.h  eigen3-hdf5.hpp  simulator.h
input_example/: 1a  1b  2b  3a  3b  5x1  5x6  HEUsphere_detection  k_infinity  k_infinity_dataS  mgxs_infinity  shielding_vReduction  shielding_varReduction  shielding_varReduction_1  shielding_varReduction_10  shielding_varReduction_2  shielding_varReduction_3  shielding_varReduction_4  shielding_varReduction_5  shielding_varReduction_6  shielding_varReduction_8  sphere_detection  test1a  test2
src/: .Estimator.cpp.swp  .Source.cpp.swp  .XMLparser.cpp.swp  Algorithm.cpp  Distribution.cpp  Entropy.cpp  Estimator.cpp  Estimator.cppf  Geometry.cpp  Geometry.cppf  Material.cpp  Material.cppf  Nuclide.cpp  Particle.cpp  Particle.cppf  Point.cpp  Reaction.cpp  SetUpSimulator.cpp  Simulator.cpp  Solver.cpp  Source.cpp  TRMM.cpp  VReduction.cpp  XMLparser.cpp  XSec.cpp
src/simulator/: fixed_source.cpp  general.cpp  handler.cpp  ksearch.cpp  population_control.cpp  random_walk.cpp  report.cpp  setup.cpp  time_dependent.cpp
src_TRMM/: TRMM.cpp
test/: test_Distribution.cpp  test_Plane.cpp  unit_test.cpp
test_folder/: 4c  5  5x3  6a  6c  test1a  test1c
unit_test/: test_Particle.cpp  test_Plane.cpp  test_Point.cpp  test_integral_Simulator.cpp
xs_library/: 005010.txt  006000.txt  008016.txt  040092.txt  040094.txt  092235.txt  Cnat.txt  Sn-116.txt  Sn-122.txt
(+27 files in other folders)
